fix document issues.
