# gameLogCollector/models/models.go
@@ -1,6 +1,8 @@
 package models
 
-import "time"
+import (
+	"time"
+)
 
 // table for GameLog
 type GameLog struct {
@@ -9,4 +11,14 @@ type GameLog struct {
 	Action    string    `json:"action" binding:"required"`
 	Timestamp time.Time `json:"timestamp"`
 	Details   string    `json:"details" binding:"required"`
+}
+
+// ErrorResponse represents an error response with a single error message.
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+// CreateResponse represents an id after created a item.
+type CreateResponse struct {
+	ID int `json:"id"`
 }
