# playerManagementSystem/handlers/levels_handler.go
@@ -15,13 +15,13 @@ import (
 // @Tags         levels
 // @Accept       json
 // @Produce      json
-// @Success      200  {array}   models.Level  "A list of levels"
-// @Failure      500  {object}  error  "Internal server error"
+// @Success      200  {object}  []models.Level 			"A list of levels"
+// @Failure      500  {object}  models.ErrorResponse	"Internal server error"
 // @Router       /levels [get]
 func GetLevels(c *gin.Context, db *sql.DB) {
 	levels, err := databases.GetLevelsData(db)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, levels)
@@ -33,20 +33,20 @@ func GetLevels(c *gin.Context, db *sql.DB) {
 // @Accept       json
 // @Produce      json
 // @Param        level  body  models.Level  true  "Level details to be created"
-// @Success      201  {object}  number "Level created successfully with the generated ID"
-// @Failure      400  {object}  error  "Bad request due to invalid input"
-// @Failure      500  {object}  error  "Internal server error"
+// @Success      201  {object}  models.CreateResponse "Level created successfully with the generated ID"
+// @Failure      400  {object}  models.ErrorResponse  "Bad request due to invalid input"
+// @Failure      500  {object}  models.ErrorResponse  "Internal server error"
 // @Router       /levels [post]
 func CreateLevel(c *gin.Context, db *sql.DB) {
 	var newLevel models.Level
 	if err := c.BindJSON(&newLevel); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	id, err := databases.AddLevel(db, newLevel.Name, newLevel.LV)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
-	c.JSON(http.StatusCreated, gin.H{"id": id})
+	c.JSON(http.StatusCreated, models.CreateResponse{ID: id})
 }
