# playerManagementSystem/handlers/players_handler.go
@@ -16,13 +16,13 @@ import (
 // @Tags         players
 // @Accept       json
 // @Produce      json
-// @Success      200  {array}   models.PlayerRank  "A list of players with their ranks"
-// @Failure      500  {object}  error  "Internal server error"
+// @Success      200  {object}  []models.PlayerRank  "A list of players with their ranks"
+// @Failure      500  {object}  models.ErrorResponse  "Internal server error"
 // @Router       /players [get]
 func GetPlayers(c *gin.Context, db *sql.DB) {
 	playerRanks, err := databases.GetPlayersData(db)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, playerRanks)
@@ -34,23 +34,23 @@ func GetPlayers(c *gin.Context, db *sql.DB) {
 // @Accept       json
 // @Produce      json
 // @Param        player  body  models.PlayerRank  true  "Player details to be created"
-// @Success      201  {object}  number  "Player created successfully with the generated ID"
-// @Failure      400  {object}  error  "Bad request due to invalid input"
-// @Failure      500  {object}  error  "Internal server error"
+// @Success      201  {object}  models.CreateResponse  "Player created successfully with the generated ID"
+// @Failure      400  {object}  models.ErrorResponse  "Bad request due to invalid input"
+// @Failure      500  {object}  models.ErrorResponse  "Internal server error"
 // @Router       /players [post]
 func CreatePlayer(c *gin.Context, db *sql.DB) {
 	var newPlayerRank models.PlayerRank
 	if err := c.BindJSON(&newPlayerRank); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 
 	id, err := databases.AddPlayer(db, newPlayerRank.Name, newPlayerRank.LV)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
-	c.JSON(http.StatusCreated, gin.H{"id": id})
+	c.JSON(http.StatusCreated, models.CreateResponse{ID: id})
 }
 
 // @Summary      Retrieve a player by ID
@@ -60,14 +60,14 @@ func CreatePlayer(c *gin.Context, db *sql.DB) {
 // @Produce      json
 // @Param        id  path  int  true  "Player ID"
 // @Success      200  {object}  models.PlayerRank  "Player details"
-// @Failure      400  {object}  error  "Invalid ID supplied"
-// @Failure      500  {object}  error  "Internal server error"
+// @Failure      400  {object}  models.ErrorResponse  "Invalid ID supplied"
+// @Failure      500  {object}  models.ErrorResponse  "Internal server error"
 // @Router       /players/{id} [get]
 func GetPlayer(c *gin.Context, db *sql.DB) {
 	id, _ := strconv.Atoi(c.Param("id"))
 	playerRank, err := databases.GetPlayer(db, id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, playerRank)
@@ -79,25 +79,23 @@ func GetPlayer(c *gin.Context, db *sql.DB) {
 // @Accept       json
 // @Produce      json
 // @Param        player  body  models.PlayerRank  true  "Player details to be updated"
-// @Success      200  {object}  string  "Player updated successfully"
+// @Success      200  {object}  models.SuccessResponse  "Player updated successfully"
 // @Failure      400  {object}  error  "Bad request due to invalid input"
 // @Failure      500  {object}  error  "Internal server error"
 // @Router       /players [put]
 func UpdatePlayer(c *gin.Context, db *sql.DB) {
 	var playerRank models.PlayerRank
 	if err := c.BindJSON(&playerRank); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 
 	err := databases.UpdatePlayer(db, playerRank)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
-
-	var args interface{}
-	c.JSON(http.StatusOK, args)
+	c.JSON(http.StatusOK, models.SuccessResponse{})
 }
 
 // @Summary      Delete a player
@@ -106,17 +104,16 @@ func UpdatePlayer(c *gin.Context, db *sql.DB) {
 // @Accept       json
 // @Produce      json
 // @Param        id  path  int  true  "Player ID to be deleted"
-// @Success      200  {object}  string  "Player deleted successfully"
-// @Failure      400  {object}  error  "Invalid ID supplied"
-// @Failure      500  {object}  error  "Internal server error"
+// @Success      200  {object}  models.SuccessResponse	"Player deleted successfully"
+// @Failure      400  {object}  models.ErrorResponse  	"Invalid ID supplied"
+// @Failure      500  {object}  models.ErrorResponse  	"Internal server error"
 // @Router       /players/{id} [delete]
 func DeletePlayer(c *gin.Context, db *sql.DB) {
 	id, _ := strconv.Atoi(c.Param("id"))
 	err := databases.DeletePlayer(db, id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
-	var args interface{}
-	c.JSON(http.StatusOK, args)
+	c.JSON(http.StatusOK, models.SuccessResponse{})
 }
